# oxtra

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bintransdebug  main.cpp
src/: CMakeLists.txt  doc.md  main.cpp
src/oxtra/: static_list.cpp  static_list.h  types.h
src/oxtra/Logger/: Logger.cpp  logger.h
src/oxtra/arguments/: arguments.cpp  arguments.h
src/oxtra/codegen/: binary_operation.cpp  binary_operation.h  code_batch.cpp  code_batch.h  codegen.cpp  codegen.h  codegen_helper.cpp  codegen_instructions.cpp  encoding.cpp  encoding.h  flags.cpp  flags.h  helper.cpp  helper.h  instruction.cpp  instruction.h  jump_table.cpp  jump_table.h  transform_instruction.cpp  unary_operation.cpp  unary_operation.h
src/oxtra/codegen/Test/: CodeBatch.h  DoubleOperation.h  Instruction.cpp  Instruction.h  SingleOperation.h  binary_operation.cpp  binary_operation.h  code_batch.h  instruction.cpp  instruction.h  transform_instruction.cpp  transform_instruction.h  unary_operation.h
src/oxtra/codegen/Test/Instructions/: Add.h
src/oxtra/codegen/Test/instructions/: add.h
src/oxtra/codegen/Test/jumptable/: jump_table.cpp  jump_table.h  jump_table.s
src/oxtra/codegen/codestore/: codestore.cpp  codestore.h
src/oxtra/codegen/decoding/: decoding.cpp  decoding.h  riscv_decoding.cpp  riscv_decoding.h
src/oxtra/codegen/encoding/: encoding.cpp  encoding.h
src/oxtra/codegen/flags/: compute_carry.s  compute_overflow.s  flags.cpp  flags.h
src/oxtra/codegen/instructions/: add.cpp  add.h  binary_operation.cpp  binary_operation.h  call.h  dec.cpp  imul.h  jmp.cpp  mov.cpp  mov.h  sar.cpp  sar.h  shl.cpp  shl.h  shr.cpp  shr.h  sub.cpp  sub.h  syscall.cpp  unary_operation.cpp  unary_operation.h  unsupported_instruction.cpp  unsupported_instruction.h
src/oxtra/codegen/instructions/arithmetic/: adc.cpp  adc.h  add.cpp  add.h  dec.cpp  dec.h  flags_carry.inc.s  flags_carry.s  flags_overflow.inc.s  flags_overflow.s  idiv.cpp  idiv.h  imul.cpp  inc.cpp  inc.h  mul.cpp  mul.h  neg.cpp  neg.h  sub.cpp  sub.h
src/oxtra/codegen/instructions/comparable/: cmp.cpp  cmp.h  comparable.cpp  comparable.h  test.cpp  test.h
src/oxtra/codegen/instructions/control-flow/: call.cpp  call.h  jmp.cpp  jmp.h  leave.cpp  ret.cpp  ret.h  syscall.cpp  syscall.h
src/oxtra/codegen/instructions/flags/: clc.cpp  clc.h  stc.cpp  stc.h
src/oxtra/codegen/instructions/logic/: and.cpp  and.h  logic.cpp  logic.h  nop.cpp  nop.h  not.cpp  not.h  or.cpp  or.h  rol.h  ror.h  rotation.h  sar.cpp  sar.h  shift.cpp  shift.h  shl.cpp  shl.h  shr.cpp  shr.h  xor.cpp  xor.h
src/oxtra/codegen/instructions/memory/: cex.cpp  cex.h  (+16 more)
src/oxtra/codegen/jump-table/: jump_table.cpp  jump_table.h  jump_table.s
src/oxtra/codegen/jumptable/: jump_table.h  jump_table.s
src/oxtra/debugger/: debugger.cpp  debugger.h  debugger.inc.s  debugger_menu.cpp  debugger_print.cpp
src/oxtra/dispatcher/: assembly_defines.inc.s  context.cpp  context.h  dispatcher.cpp  dispatcher.h  dispatcher.inc.s  dispatcher.s  execution_context.h  syscall_map.h  syscalls.cpp  syscalls.h
src/oxtra/dispatcher/debugger/: debugger.cpp  debugger.h  debugger.inc.s  debugger_menu.cpp  debugger_print.cpp
src/oxtra/elf/: ELF.cpp  ELF.h  Elf.cpp  Elf.h  Parser.cpp  Parser.h  elf.cpp  elf.h
src/oxtra/logger/: logger.cpp  logger.h
src/oxtra/utils/: fixed_array.h  static_list.h  types.h
test/: CMakeLists.txt  ElfTest.cpp  ExampleTest.cpp
test/integration/: adc.otest  add.otest  arithmetic_test.otest  bt.otest  call_print.otest  cmov.otest  cmp.otest  cmps.otest  dec.otest  fibonacci_nojc.otest  gzip.otest  high_register.otest  i_div_test.otest  i_mul_test.otest  inc.otest  jle.otest  lea.otest  lods.otest  mov_deadc0de.otest  movs.otest  musl_prime.otest  neg.otest  prime_print.otest  print_version.otest  rep.otest  reps.otest  rotate.otest  scas.otest  setcc.otest  shift.otest  stc_clc.otest  stos.otest  sub.otest  test.otest  test_read_write.otest
test/musl/: prime  prime.c
test/oxtra/arguments/: arguments_test.cpp
test/oxtra/codegen/codestore/: codestore_test.cpp
test/oxtra/codegen/decoding/: decoding_test.cpp
test/oxtra/elf/: elf_test.cpp
test/oxtra/encoding/: encoding_test.cpp
test/oxtra/utils/: fixed_array_test.cpp  static_list_test.cpp
test/resources/: dump_me  dump_me.cpp  dump_me_raw_image  fibonacci_nolibc_nojc  main  no_libc  syscall_nolibc
test/resources/instructions/: adc  adc.s  add  add.s  bt  bt.s  cmov  cmov.s  cmp  cmps  cmps.s  dec  dec.s  inc  inc.s  jle  jle.s  lea  lea.s  lods  lods.s  movs  movs.s  neg  neg.s  rep  rep.s  rotate  rotate.s  scas  scas.s  setcc  setcc.s  shift  shift.s  stc_clc  stc_clc.s  stos  stos.s  sub  (+6 more)
test/resources/musl/: gzip  gzip_mmap  gzip_no_sse  gzip_threshold_check_no_free  prime  prime.c  prime_no_sse
test/resources/no_libc/: arithmetic_test  arithmetic_test.s  call_print  call_print.s  fibonacci_nojc  fibonacci_nojc.s  hello_world  high_register  high_register.s  i_mul_test  i_mul_test.s  mov_deadc0de  mov_deadc0de.s  next_block  next_block.s  prime_print  prime_print.c  print_loop_numbers  print_loop_numbers.s  test_adc  test_adc.s  test_add  test_add.s  test_add_reg  test_add_reg.s  test_carry_add  test_carry_add.s  test_carry_sub  test_carry_sub.s  test_cmp  test_cmp.s  test_dec  test_inc  test_inc.s  test_neg  test_read_write  test_read_write.s  test_sub  test_sub_reg  test_sub_reg.s
test/resources/no_libc/div/: div_08b_1.elf  div_08b_1.s  div_08b_2.elf  div_08b_2.s  div_08b_3.elf  div_08b_3.s  div_08b_4.elf  div_08b_4.s  div_16b_1.elf  div_16b_1.s  div_16b_2.elf  div_16b_2.s  div_16b_3.elf  div_16b_3.s  div_16b_4.elf  div_16b_4.s  div_32b_1.elf  div_32b_1.s  div_32b_2.elf  div_32b_2.s  div_32b_3.elf  div_32b_3.s  div_32b_4.elf  div_32b_4.s  div_64b_1.elf  div_64b_1.s  div_64b_2.elf  div_64b_2.s  div_64b_3.elf  div_64b_3.s  div_64b_4.elf  div_64b_4.s  div_overflow_08b.elf  div_overflow_08b.s  div_overflow_16b.elf  div_overflow_16b.s  div_overflow_32b.elf  div_overflow_32b.s  div_zero.elf  div_zero.s
(+117 files in other folders)
